--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,12 @@ build_server:
     untracked: false
     expire_in: 7 days
     paths:
-      - kitty-server/build/libs/kitty-bundler-1.21.10-R0.1-SNAPSHOT-mojmap.jar
+      - server.jar
   script:
     - git config --global user.email "ci@gitlab.eps-dev.de"
     - git config --global user.name "CI"
+    - export BUILD_NUMBER=$CI_PIPELINE_IID
     - gradle applyAllPatches
     - gradle createMojmapPaperclipJar
+    - cp kitty-server/build/libs/kitty-paperclip-1.21.10-R0.1-SNAPSHOT-mojmap.jar server.jar
   needs: []
