--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - upload
 
 build_server:
   image: gradle:8.14-jdk21
@@ -17,3 +18,20 @@ build_server:
     - gradle createMojmapPaperclipJar
     - cp kitty-server/build/libs/kitty-paperclip-1.21.10-R0.1-SNAPSHOT-mojmap.jar server.jar
   needs: []
+
+upload:
+  image:
+    name: registry.cdev.nexus/kittysuite/version:main
+    pull_policy: always
+  stage: upload
+  needs:
+      - build_server
+  script:
+    - git clone https://gitlab.eps-dev.de/Lilly/kittypaperversions.git
+    - python3 generate.py
+    - cd kittypaperversions
+    - git config --global user.email "ci@gitlab.eps-dev.de"
+    - git config --global user.name "CI"
+    - git add .
+    - git commit -m "Update versions for build $CI_PIPELINE_IID"
+    - git push
