--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 group=com.kittyscan.server
-version=1.21.10-R0.1-SNAPSHOT
-mcVersion=1.21.10
-paperRef=2f7f1397628914e44154c326b56e5e7e9adf6721
+version=1.21.11-R0.1-SNAPSHOT
+mcVersion=1.21.11
+paperRef=94d0c97acd627866d24795d68d30d66a4b84974a
+apiVersion=1.21.11
 
 org.gradle.configuration-cache=true
 org.gradle.caching=true
